# Logo-placement

./: README.md  launch.py  logger.py  pyproject.toml
app/: config.py  main.py
app/Modules/: bg_replacement.py  logo_placement.py  user_management.py
app/api/: modules_api.py  ping.py  standalone.py
app/controller/: module_controller.py
app/pymodels/: error_response.py  module_response.py
app/utils/: components_utils.py  database.py  logUtils.py
testing/: bg_replacement_test.py  logo_placement_test.py  user_managment_test.py
